--- a/packages/tsx-dom-ssg-demo/src/components/TagDetail/TagDetail.module.scss
+++ b/packages/tsx-dom-ssg-demo/src/components/TagDetail/TagDetail.module.scss
@@ -16,7 +16,7 @@
             flex-direction: column;
             margin: 0;
             padding: 0.5rem 1rem;
-            padding-left: -0.5rem;
+            padding-left: 0.5rem;
             border-left: 0.5rem solid var(--color-dark);
             border-radius: 0;
 
